# career-alter-ego-first-ai-agent-

./: AI Agent Coursera.txt  AI Agents Course.txt  README.md  main.py  pyproject.toml  summary.html
SDR_Agent/: adr_agent_using_kimi.ipynb  main.py
career_alter_ego/: README.md  agent.ipynb  main.py
career_alter_ego/me/: summary.txt
crewai/debate/: pyproject.toml  report.md
crewai/debate/outputs/: decision.md  oppose.md  propose.md
crewai/debate/src/debate/: crew.py  main.py
crewai/debate/src/debate/config/: agents.yaml  tasks.yaml
crewai/stock_picker/: README.md
crewai/stock_picker/output/: decision.md  financial_research.json  macro_report.json  risk_assessment.json  technical_analysis.json  trending_stocks.json
crewai/stock_picker/src/stock_picker/: crew.py
deep_research/: email_agent.py
