[project]
name = "ai-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio",
    "openai",
    "openai-agents",
    "pypdf",
    "python-dotenv",
    "requests",
]

[tool.uv.workspace]
members = [
    "crewai/debate",
    "crewai/stock_picker",
]

[tool.uv]
prerelease = "allow"
